# com.github.retsef.chess

./: .gitignore  meson.build  vala-lint.conf
data/: chess.css  chess.ui  com.github.retsef.chess.appdata.xml  com.github.retsef.chess.desktop  com.github.retsef.chess.gresource.xml  com.github.retsef.chess.gschema.xml  meson.build
data/widgets/: board_box_widget.ui  board_widget.ui
src/: Application.vala  meson.build
src/engine/: Board.vala  BoardEngine.vala  Coordinate.vala
src/engine/pieces/: Bishop.vala  King.vala  Knight.vala  Pawn.vala  Piece.vala  Queen.vala  Rook.vala
src/views/: Board.vala  BoardBoxView.vala  BoardView.vala
src/widgets/: BoardBoxWidget.vala  BoardWidget.vala
